# mm-pos

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pre-commit.yaml  publish.yml  tests.yaml
mm_pos/: __init__.py  api.py  core.py  db.py  inventory.py  menu.py  order.py  payment.py  receipt.py  reports.py  tables.py
tests/: test_api.py  test_core.py  test_db.py  test_inventory.py  test_menu.py  test_order.py  test_payment.py  test_receipt.py  test_reports.py  test_tables.py  test_user.py
